revue des filtres + supp des module Commentaire